# TrajectoryOptimization

./: .gitignore  README.md
acrobot/: CMakeLists.txt  README.md  test.cpp
acrobot/model/: acrobot.dtdsl  acrobot.kindsl  run.sh
flickingFinger/: MAIN.m  MAIN.m~  RUN_FIRST_RESULT.m  VISUALIZE_RESULT.m  autoGen_J_grad.m  autoGen_c_grad.m  autoGen_ceq_grad.m  circle.m  clkwheelrotate.mat  computeC.m  computeFK.m  computeG.m  computeGradients.m  computeJ.m  computeJb.m  computeJs.m  computeM.m  contactSpeedAngle.m  contactSpeedAngleSym.m  counterclkwheelrotate.mat  counterclkwheelrotate_1212_with_new_cst.mat  counterclkwheelrotate_1214_with_new_cst.mat  counterclkwheelrotate_1216_with_new_obj.mat  counterclkwheelrotate_1218_full_cst_min_force_snopt.mat  counterclkwheelrotate_1218_only_first_c_cst.mat  counterclkwheelrotate_1218_with_contact_c_cst.mat  counterclkwheelrotate_1218_with_snopt.mat  counterclkwheelrotate_1218_xF_back_as_cst_fmincon.mat  counterclkwheelrotate_1218_xF_back_as_cst_full_cst_snopt.mat  counterclkwheelrotate_1218_xF_back_as_cst_snopt.mat  counterclkwheelrotate_different_init.mat  derive_ceqgrad.m  derive_ceqgrad.m~  derive_objgrad.asv  derive_objgrad.m  drawFlickingFinger.m  drawFlickingFingerState.m  flickingFingerDynamics.m  flickingFingerForwardDynamics.m  flickingFingerKinematics.m  (+14 more)
ifopt/ifopt_test/: CMakeLists.txt  main_ipopt.cpp  main_snopt.cpp  pre_build_source.sh  test_vars_constr_cost.h
snopt/: snopt7.lic  snoptmex.mexw64
snopt/snopt-matlab-3.0.0/matlab/: setpath.m  snsolve.m
snopt/snopt-matlab-3.0.0/matlab/examples/Dynamics_HW11_Solutions_export/Code/: HW11.m  animateHW11.m  computeDynamicMatrices.m  computeDynamicMatricesSymbolic.m  dynamics.m  minTorque.m  mpc_dynamics.m  nonlincon.m  traj1.eps  traj2.eps
snopt/snopt-matlab-3.0.0/matlab/examples/spring/: springa.m
snopt/snopt-matlab-3.0.0/mex/: snoptmex.mexa64
